fixed Appbar being too short by reducing size of vw components.

--- a/parkfull/src/components/navigation/navigation.css
+++ b/parkfull/src/components/navigation/navigation.css
@@ -1,4 +1,6 @@
-
+body {
+  margin: 0;
+}
 
 .nav-bar {
   background-color: cadetblue;
